--- a/content/community/contributing.adoc
+++ b/content/community/contributing.adoc
@@ -1,200 +1,62 @@
 = Contributing to Clojure
-Rich Hickey
-2016-01-15
+Alex Miller
+2019-05-01
 :type: community
 :toc: macro
 :icons: font
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-Following the lead of other open source projects, the Clojure project requires contributors to jointly assign their copyright on contributed code. The https://secure.na1.echosign.com/public/hostedForm?formid=95YMDL576B336E[Contributor Agreement] (CA) gives Rich Hickey and the contributor joint copyright interests in the code: the contributor retains copyrights while also granting those rights to Rich Hickey as the open source project sponsor.
+== Ways to Contribute
 
-The CA is derived from the Oracle Contributor Agreement (OCA), used for OpenJDK, Netbeans and OpenSolaris projects and others. There is a good http://www.oracle.com/technetwork/oca-faq-405384.pdf[OCA FAQ] answering many questions.
+There are many ways to make a meaningful contribution to the Clojure community:
 
-The CA does not change the rights or responsibilities of the Clojure community under the http://opensource.org/licenses/eclipse-1.0.php[Eclipse Public License (EPL)]. By executing the CA, contributors protect the Clojure code base, enable alternative licensing models, and protect the flexibility to adapt the project to the changing demands of the community. In order for the CA to be effective, the Clojure project must obtain an assignment for all contributions. Please review the CA for a complete understanding of its terms and conditions. By contributing source code or other material to Clojure, you represent that you have a CA with Rich Hickey for such contributions. In order to track contributors, you understand that your full name and username may be posted on a web page listing authorized contributors that is accessible via a public URL.
+* Advocate for the use of Clojure in your organization
+* Use Clojure and sharing your experience via talks, blogs, etc
+* Start or join a local meetup
+* Help new Clojure users in Slack or other forums
+* Create or providing patches to open source libraries
+* Create or maintaining Clojure tools
+* Write guides or reference documentation for libraries
+* Write intros or getting started guides for tools
+* Create Clojure podcasts, screencasts, or videos
+* Give a talk at a conference
+* Write an article or book
+* Start a Clojure podcast
+* Start a Clojure conference or join the organization team for an existing one
 
-== Instructions for submitting the agreement
+If you are writing a guide, making an event, or creating a resource, please consider contributing to this web site, clojure.org. All of the content is https://github.com/clojure/clojure-site[stored in GitHub] and pull requests and issues are accepted. For more information on how to contribute, see the page on <<contributing_site#,contributing to the site>>. If you have an idea for a new guide or updated documentation, please https://github.com/clojure/clojure-site/issues[file an issue] for discussion.
 
-* Fill out and submit the https://secure.na1.echosign.com/public/hostedForm?formid=95YMDL576B336E[Contributor Agreement] (an online e-form)
+== Clojure Development
 
-== Making a contribution
+Clojure was created by Rich Hickey and is developed by Rich and a core team of developers at https://cognitect.com[Cognitect], which supports this work. The Clojure development team values a measured and thoughtful approach to language evolution with a strong emphasis on maintaining backward compatibility.
 
-Before you invest time working on a change, discuss what you're trying to do with others on the https://groups.google.com/group/clojure-dev[Clojure Dev Google group]. They're likely to be able to offer comments and suggestions that will result in a higher-quality change and a smoother submission process. Announcing that you're working on a particular item can also help to avoid wasted effort in case someone else is already working on it. Once you've submitted the CA, you can https://dev.clojure.org/jira/browse/CLJ[submit patches via JIRA]. Frequent and trusted contributors of more substantial libraries may be granted committer membership in the Clojure contrib projects.
+The Clojure core team values those that engage with the current stream of ongoing work, doing the difficult work of triage, <<screening_tickets#,screening>>, patch development and review. The <<workflow#,Workflow>> page highlights places to tap into those queues of work and the reports that show the work in process. The core team tends to focus on tickets primarily in the late alpha / early beta cycle of a release. During other parts of the release cycle, activity may seem dormant, but don't let that prevent you from improving tickets. Tickets that are well-written with good patches can move quickly through the cycle at the appropriate time.
 
-Please see the following pages for more info:
+Important development resources:
 
-* <<workflow#,Workflow>>
-* <<creating_tickets#,Creating Tickets>>
-* <<developing_patches#,Developing Patches>>
+* https://github.com/clojure/clojure[Clojure source repository]
+* <<contributor_agreement#,Clojure contributor agreement>> - required for all site and language contributions
+* https://dev.clojure.org/jira[Clojure issue tracker]
+* <<workflow#,Clojure issue workflow>>
+* https://build.clojure.org[Clojure build box]
+* <<downloads#,Clojure releases>>
+* https://clojure.github.com/clojure[Clojure API docs] 
 
-[[contributors]]
-== Contributors
+=== Issues
 
-See the full <<contributors#,list of contributors>> that have signed the Clojure Contributor Agreement.
+If you have found an issue with Clojure, please consider filing a ticket in the issue tracker. You might want to check what you are seeing with others on a Clojure discussion forum before filing. Please review the <<creating_tickets#,guide to creating useful tickets>>.
 
-[[patches]]
-== Contributed patches to Clojure:
+Clojure accepts contributions as patches on issues. Before submitting a patch, please <<contributor_agreement#,sign the contributor agreement>>, and review <<developing_patches#,these guidelines>> on developing patches. Please note that tickets may be assessed over a long period of time, following the <<workflow#,workflow>>.
 
-* Aaron Bedra
-* Aaron Cohen
-* Achim Passen
-* Adam Clements
-* Alan Dipert
-* Alan Malloy
-* Alexander Yakushev
-* Alex Miller
-* Alex Osborne
-* Alex Ott
-* Alex Redington
-* Alexander Kiel
-* Alexander Taggart
-* Alexander Yakushev
-* Alf Kristian Stoyle
-* Allen Rohner
-* Ambrose Bonnaire-Sergeant
-* Andrei Kleschinski
-* Andrew Rosa
-* Andy Fingerhut
-* Andy Sheldon
-* Anthony Grimes
-* Aspasia Beneti
-* Baishampayan Ghose
-* Ben Bader
-* Ben Smith-Mannschott
-* Benjamin Teuber
-* Blake West
-* Bozhidar Batsov
-* Brandon Bloom
-* Brenton Ashworth
-* Brian Hurt
-* Brian Taylor
-* Bruce Adams
-* Cameron Desautels
-* Cezary Kosko
-* Chad Taylor
-* Chas Emerick
-* Chris Gray
-* Chris Houser
-* Chris Perkins
-* Christoffer Sawicki
-* Christophe Grand
-* Christopher Redinger
-* Clinton R. Nixon
-* Colin Jones
-* Cosmin Stejerean
-* Daniel Compton
-* Daniel Solano Gómez
-* David Bürgin
-* David Liebke
-* David McNeil
-* David Miller
-* David Powell
-* David Rupp
-* David Santiago
-* Devender Gollapally
-* Devin Walters
-* Dimitry Gashinsky
-* Drew Raines
-* Ed Bowler
-* Eli Lindsey
-* Eric Schoonover
-* Erik Assum
-* Eugene Kostenko
-* Federico Brubacher
-* Frantisek Sodomka
-* Gabriel Horner
-* Gary Fredericks
-* George Jahad
-* Gerrit Jansen Van Vuuren
-* Ghadi Shayban
-* Gijs Stuurman
-* Gordon Syme
-* Greg Leppert
-* Herwig Hochleitner
-* Howard Lewis Ship
-* Hubert Iwaniuk
-* Hugo Duncan
-* Immo Heikkinen
-* James Reeves
-* Jarkko Oranen
-* Jason Wolfe
-* Jason Whitlark
-* Jean Niklas L'orange
-* Jeremy Heiler
-* Joe Gallo
-* Johan Mena
-* John Szakmeister
-* Jonas Enlund
-* Jozef Wagner
-* Juha Arpiainen
-* Justin Balthrop
-* Justin Kramer
-* Karsten Schmidt
-* Kevin Downey
-* Konrad Hinsen
-* Kurt Harriger
-* Kwang Yul Seo
-* Laurent Petit
-* Lauri Pesonen
-* Lee Yen-Chin
-* Luke VanderHart
-* Mark Simpson
-* Matt Revelle
-* Matthew Boston
-* Matthew Gilliard
-* Max Penet
-* Meikel Brandmeyer
-* Micah Martin
-* Michael Blume
-* Michael Fogus
-* Michał Marczyk
-* Michel Alexandre Salim
-* Mike Anderson
-* Mike Hinchey
-* Nahuel Greco
-* Nicola Mometto
-* Nicolas Buduroi
-* Nikita Prokopov
-* Nola Stowe
-* Paul M Bauer
-* Paul Stadig
-* Pepijn de Vos
-* Phil Hagelberg
-* Philip Aston
-* Philip Potter
-* Ragnar Dahlén
-* Ralf Schmitt
-* Rasmus Svensson
-* Rich Hickey
-* Richard Newman
-* Robert Lachlan
-* Ruslan Al-Fakikh
-* Russ Olsen
-* Scott Lowe
-* Sean Corfield
-* Sean Devlin
-* Sebastien Martel
-* Shogo Ohta
-* Stefan Kamphausen
-* Steffen Dienst
-* Stephen C. Gilardi
-* Steve Miner
-* Steven Yi
-* Stuart Halloway
-* Stuart Sierra
-* Tassilo Horn
-* Tim Dysinger
-* Tim McCormack
-* Timothy Baldridge
-* Timothy Pratley
-* Toby Crawley
-* Tom Faulhaber
-* Tomasz Nurkiewicz
-* Tsutomu Yano
-* Vipul Amler
-* Yanxiang Lou
-* Yegor Timoshenko
-* Zach Tellman
-* Zhuang XiaoDan
+=== Enhancements and Features
 
-_**Many thanks for your contributions to Clojure!**_
+Clojure's direction is determined by Rich Hickey and the core team. This process is open to inputs and visible in issues and commits, but not explicitly driven by the community. The core team pays attention to the needs of the community by monitoring and participating in many Clojure discussion forums, and by reviewing issues and votes in the issue tracker.
+
+If you have an idea for an enhancement or new feature for Clojure, it may be helpful to search the issue tracker for prior issues and/or raise this idea for discussion in one of the Clojure forums. In particular, the mailing lists or #clojure-dev room on Clojurian slack are good places to discuss. Please follow the guidelines in <<creating_tickets#,Creating Tickets>> and <<developing_patches#,Developing Patches>> - enhancement/feature tickets should start with a compelling problem to solve and compare alternatives and their tradeoffs, rather than leap straight to a solution and a patch.
+
+=== Roadmap
+
+Clojure is an open-ended project with no fixed release schedule. Major releases typically occur about once per year. While there are typically a few focused areas of work in a major release, it is common for those to change during the development of the release in response to either feedback or changing external needs. Because of this, a roadmap is typically not declared at the beginning of a release. Ongoing development is visible during alpha releases, often phased over multiple dev releases. The <<devchangelog#,Dev Changelog>> chronicles these changes during the release cycle.
+
+Additionally, the core team may be doing work in dependent projects or tools, rather than the language itself, such as spec, core.specs, tools.deps, clj, etc. This is still considered part of the broader "release" train.
