more tweakss on contributing page

--- a/content/community/contributing.adoc
+++ b/content/community/contributing.adoc
@@ -12,11 +12,11 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 There are many ways to make a meaningful contribution to the Clojure community:
 
 * Advocate for the use of Clojure in your organization
-* Use Clojure and sharing your experience via talks, blogs, etc
+* Use Clojure and share your experience via talks, blogs, etc
 * Start or join a local meetup
 * Help new Clojure users in Slack or other forums
-* Create or providing patches to open source libraries
-* Create or maintaining Clojure tools
+* Create or provide patches to open source libraries
+* Create or improve Clojure tools
 * Write guides or reference documentation for libraries
 * Write intros or getting started guides for tools
 * Create Clojure podcasts, screencasts, or videos
@@ -24,14 +24,15 @@ There are many ways to make a meaningful contribution to the Clojure community:
 * Write an article or book
 * Start a Clojure podcast
 * Start a Clojure conference or join the organization team for an existing one
+* Test new alpha or beta releases of Clojure on your code base and provide feedback
 
-If you are writing a guide, making an event, or creating a resource, please consider contributing to this web site, clojure.org. All of the content is https://github.com/clojure/clojure-site[stored in GitHub] and pull requests and issues are accepted. For more information on how to contribute, see the page on <<contributing_site#,contributing to the site>>. If you have an idea for a new guide or updated documentation, please https://github.com/clojure/clojure-site/issues[file an issue] for discussion.
+If you are writing a guide, making an event, or creating a resource, please consider contributing to this web site, clojure.org. All of the content is https://github.com/clojure/clojure-site[stored in GitHub] and pull requests and issues are accepted. For more information on how to contribute, see the page on <<contributing_site#,contributing to the site>>. Every page has a link to the corresponding source file in the bottom right corner. If you have an idea for a new guide or updated documentation, please https://github.com/clojure/clojure-site/issues[file an issue] for discussion.
 
 == Clojure Development
 
-Clojure was created by Rich Hickey and is developed by Rich and a core team of developers at https://cognitect.com[Cognitect], which supports this work. The Clojure development team values a measured and thoughtful approach to language evolution with a strong emphasis on maintaining backward compatibility.
+Clojure was created by Rich Hickey and is developed by a core team of developers at https://cognitect.com[Cognitect], which supports this work. The Clojure development team values a measured and thoughtful approach to language evolution with a strong emphasis on maintaining backward compatibility.
 
-The Clojure core team values those that engage with the current stream of ongoing work, doing the difficult work of triage, <<screening_tickets#,screening>>, patch development and review. The <<workflow#,Workflow>> page highlights places to tap into those queues of work and the reports that show the work in process. The core team tends to focus on tickets primarily in the late alpha / early beta cycle of a release. During other parts of the release cycle, activity may seem dormant, but don't let that prevent you from improving tickets. Tickets that are well-written with good patches can move quickly through the cycle at the appropriate time.
+The Clojure core team values those that engage with the current stream of ongoing work, doing the difficult work of triage, <<screening_tickets#,screening>>, patch development and review. The <<workflow#,Workflow>> page highlights places to tap into those queues of work as jira reports. The core team tends to focus on tickets primarily in the late alpha / early beta period for a release cycle. During other parts of the release cycle, activity may seem dormant, but that is the perfect time to improve tickets so they are ready to evaluate. Tickets that are well-written with good patches can move quickly through the cycle at the appropriate time.
 
 Important development resources:
 
@@ -51,9 +52,9 @@ Clojure accepts contributions as patches on issues. Before submitting a patch, p
 
 === Enhancements and Features
 
-Clojure's direction is determined by Rich Hickey and the core team. This process is open to inputs and visible in issues and commits, but not explicitly driven by the community. The core team pays attention to the needs of the community by monitoring and participating in many Clojure discussion forums, and by reviewing issues and votes in the issue tracker.
+Clojure's direction is determined by Rich Hickey and the core team. This process is open to input and visible in issues and commits, but not explicitly driven by the community. The core team pays attention to the needs of the community by monitoring and participating in many Clojure discussion forums, and by reviewing issues and votes in the issue tracker.
 
-If you have an idea for an enhancement or new feature for Clojure, it may be helpful to search the issue tracker for prior issues and/or raise this idea for discussion in one of the Clojure forums. In particular, the mailing lists or #clojure-dev room on Clojurian slack are good places to discuss. Please follow the guidelines in <<creating_tickets#,Creating Tickets>> and <<developing_patches#,Developing Patches>> - enhancement/feature tickets should start with a compelling problem to solve and compare alternatives and their tradeoffs, rather than leap straight to a solution and a patch.
+If you have an idea for an enhancement or new feature for Clojure, it may be helpful to search the issue tracker for prior issues and/or raise this idea for discussion in one of the Clojure forums. In particular, the mailing lists or #clojure-dev room on Clojurian slack are good places to discuss. Please follow the guidelines in <<creating_tickets#,Creating Tickets>> and <<developing_patches#,Developing Patches>> - enhancement/feature tickets should start with a compelling problem to solve and compare alternatives and their tradeoffs, rather than leap straight to a solution and a patch. Clojure is a small language and endeavors to remain so. In many cases, proposed features can instead be provided in functions or libraries outside the core.
 
 === Roadmap
 
