--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,7 +12,7 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70", role="table"]
 |===
 
-| image::https://resizeimage.net/viewimg/Sx4uEuHNfGadQtdT/PdoFZ/sharvit_getprog-clojure_hiresm.jpg[Get Programming with Clojure,link="https://www.manning.com/books/get-programming-with-clojure"]
+| image::https://images.manning.com/720/960/resize/book/9/3568bc7-ef4f-41b4-8844-4d3ad069433a/Sharvit_GetProg-clojure_hiresmeap.png[Get Programming with Clojure,link="https://www.manning.com/books/get-programming-with-clojure"]
 | https://www.manning.com/books/get-programming-with-clojure[Get Programming with Clojure] +
 by Yehonathan Sharvit +
 Early-acces, publication estimated for fall 2019.
