added Get Programming with Clojure to Books

--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,7 +12,7 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70", role="table"]
 |===
 
-| image::https://images.manning.com/720/960/resize/book/9/3568bc7-ef4f-41b4-8844-4d3ad069433a/Sharvit_GetProg-clojure_hiresmeap.png[Get Programming with Clojure,link="https://www.manning.com/books/get-programming-with-clojure"]
+| image::https://dl.boxcloud.com/api/2.0/internal_files/342692453012/versions/361901587412/representations/jpg_paged_2048x2048/content/1.jpg?access_token=1!k9mcQ2KQSgE9QoLkI1uBpodEUuMSpI1BCjK8Gkn20KjaKu0U79VHPgIdFjS21yorhs0I5qHcw-DDCTnvhBccJfbLYK0Q9SL3opoLRBgW7D7Y_nitoLYaf2ES-VLdWTH8TakhjP6VsPINEl4Y_X05avDveAA_OZ5jU9OjQJFWA8r6_uRBreATqyVPXPS3DpYVYPt55b2LOQPpJKUmAz2w7wGDOGiZAzcO6aV1gW4ChEc6_QPTVqoE77Rjk34-qzHDtqHLXXAthZxYGpA5Ryv1_g4qJQqV2aZgdxu9qIMxeq34uTNcMQGnscVW-D5lITVYd78jpgDg1O39owpv5llIZb0laDiJ5Vy9_QK9qBRBNoMqw8Jef1dSyLpYxU9Ae-U5pbGG_eqOuTZFEugWOJDUrqJHogUSPHOFcF6x_OsJICCRjp9M_2Uty7lFk7MgUrObO3hXAD2XVQHU5vA3yyt7bwgrsG-j-U8a_s7YIXyXLab8OqOjl4to-dd31xDjPLGjLL2rAPz9JndxMi_JW3fd8y1diiFEHtXjRsWz-TYT6FkbVjoBzFmTByuthmib6_9aQA..&box_client_name=box-content-preview&box_client_version=2.8.1[Get Programming with Clojure,link="https://www.manning.com/books/get-programming-with-clojure"]
 | https://www.manning.com/books/get-programming-with-clojure[Get Programming with Clojure] +
 by Yehonathan Sharvit +
 Early-acces, publication estimated for fall 2019.
