update jira links

--- a/content/community/contrib_howto.adoc
+++ b/content/community/contrib_howto.adoc
@@ -40,7 +40,7 @@ Here's the process outline for what it takes to become a committer:
 
 * Get your <<contributing#,CA>> on file
 * Join the http://groups.google.com/group/clojure-dev[clojure-dev] mailing list
-* Create a https://dev.clojure.org/jira/browse/CLJ[JIRA account]
+* Create a https://clojure.atlassian.net/projects/CLJ[JIRA account]
 * Let Clojure core team know your github username and JIRA username so they can set up the correct permissions
 * Clojure core team need to create your account on build.clojure.org as well - see below
 
