--- a/content/community/contributing.adoc
+++ b/content/community/contributing.adoc
@@ -38,7 +38,7 @@ Important development resources:
 
 * https://github.com/clojure/clojure[Clojure source repository]
 * <<contributor_agreement#,Clojure contributor agreement>> - required for all site and language contributions
-* https://dev.clojure.org/jira[Clojure issue tracker]
+* https://clojure.atlassian.net/projects/CLJ[Clojure issue tracker]
 * <<workflow#,Clojure issue workflow>>
 * https://build.clojure.org[Clojure build box]
 * <<downloads#,Clojure releases>>
