--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -26,7 +26,7 @@ Official:
 * <<xref/../../reference/documentation#,Clojure Reference Docs>> - official reference information
 * <<xref/../../api/cheatsheet#,Clojure Cheatsheet>> - helpful categorization of most core functions
 * Source - https://github.com/clojure/clojure[Clojure], https://github.com/clojure/clojurescript[ClojureScript], https://github.com/clojure/clojure-clr[ClojureCLR]
-* Issues - https://dev.clojure.org/jira/browse/CLJ[Clojure], https://dev.clojure.org/jira/browse/CLJS[ClojureScript], https://dev.clojure.org/jira/browse/CLJCLR[ClojureCLR]
+* Issues - https://clojure.atlassian.net/projects/CLJ[Clojure], https://clojure.atlassian.net/projects/CLJS[ClojureScript], https://clojure.atlassian.net/projects/CLJCLR[ClojureCLR]
 * https://archive.clojure.org/design-wiki/display/design/Home.html[Design wiki archive]
 
 Community:
