--- a/content/community/workflow.adoc
+++ b/content/community/workflow.adoc
@@ -66,7 +66,7 @@ image::/images/content/community/process.png[JIRA Workflow]
 **Triage**
 
 * Who: Screeners
-* Report: http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10371[Open tickets] 
+* Report: https://clojure.atlassian.net/issues/?filter=10001[Open tickets] 
 * Goal: decide whether the bug or enhancement described in the ticket is actually a real bug or enhancement. 
 * Process (see: <<creating_tickets#,Creating Tickets>>):
   . Is the ticket about 1 thing?  If not, then either split the ticket yourself or ask the submitter to do so.
@@ -89,7 +89,7 @@ image::/images/content/community/process.png[JIRA Workflow]
 **Prescreening**
 
 * Who: Screeners
-* Report: http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10370[Triaged tickets]
+* Report: https://clojure.atlassian.net/issues/?filter=10002[Triaged tickets]
 * Goal: improve the ticket and screen the patch before Rich does vetting, allows faster path through the remainder of the process
 * Actions:
 ** Set Approval=Prescreened - patch is ok
@@ -98,7 +98,7 @@ image::/images/content/community/process.png[JIRA Workflow]
 **Vetting**
 
 * Who: Rich
-* Report: http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10370[Triaged] and http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10511[Prescreened] tickets
+* Report: https://clojure.atlassian.net/issues/?filter=10002[Triaged] and https://clojure.atlassian.net/issues/?filter=10003[Prescreened] tickets
 * Goal: second check on whether the bug/enhancement is worth working on and decision of whether it's suitable for the next release.
 * Actions:
 ** Close w Resolution=Declined - as above, ticket may not be something we want to address
@@ -107,20 +107,20 @@ image::/images/content/community/process.png[JIRA Workflow]
 **Release scheduling**
 
 * Who: Rich
-* Report: http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10376[Vetted tickets]
+* Report: https://clojure.atlassian.net/issues/?filter=10004[Vetted tickets]
 * Goal: determine whether a ticket is in scope for next release or should be in backlog
 * Actions:
 ** Set Fix Version to "Backlog" - don't want to fix it in the next release
 ** Set Fix Version to current release
-*** If does not have patch, will show up in http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10373[Needs Patch] report
-*** If does have patch, will show up in http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10374[Screenable] report
+*** If does not have patch, will show up in https://clojure.atlassian.net/issues/?filter=10007[Needs Patch] report
+*** If does have patch, will show up in https://clojure.atlassian.net/issues/?filter=10008[Screenable] report
 
 **Dev patch**
 
 * Who: contributors (anyone with signed CA)
 * Report: 
-** http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10373[Needs Patch] - for tickets that need a patch
-** http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10375[Incomplete] tickets - for tickets that have patches that need work
+** https://clojure.atlassian.net/issues/?filter=10007[Needs Patch] - for tickets that need a patch
+** https://clojure.atlassian.net/issues/?filter=10009[Incomplete] tickets - for tickets that have patches that need work
 * Goal: create a high quality ticket and patch for consideration (see sections below)
 * Actions: 
 ** Edit ticket or update patch to address problems or gaps based on comments. 
@@ -130,8 +130,8 @@ image::/images/content/community/process.png[JIRA Workflow]
 
 * Who: Screeners
 * Reports: 
-** http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10374[Screenable] tickets (for new vetted tickets with patches)
-** http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10375[Incomplete] tickets that have changed recently - need to re-review if submitter has updated ticket since marked Incomplete.
+** https://clojure.atlassian.net/issues/?filter=10008[Screenable] tickets (for new vetted tickets with patches)
+** https://clojure.atlassian.net/issues/?filter=10009[Incomplete] tickets that have changed recently - need to re-review if submitter has updated ticket since marked Incomplete.
 * Goal: verify that ticket and patch are ready for Rich to review.  The quality bar is HIGH - the ticket and patch should be perfect.
 * Checks (see <<creating_tickets#,Creating Tickets>> and <<developing_patches#,Developing Patches>> and <<screening_tickets#,Screening Tickets>>):
   . Is there a patch?
@@ -153,7 +153,7 @@ image::/images/content/community/process.png[JIRA Workflow]
 **Final screening**
 
 * Who: Rich 
-* Report: http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10383[Screened tickets]
+* Report: https://clojure.atlassian.net/issues/?filter=10010[Screened tickets]
 * Goal: Rich blessing the change
 * Actions:
 ** Set Approval=Incomplete - ticket or patch needs improvement 
@@ -162,7 +162,7 @@ image::/images/content/community/process.png[JIRA Workflow]
 **Commit**
 
 * Who: Stu H (usually)
-* Report: http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10377[OK tickets] 
+* Report: https://clojure.atlassian.net/issues/?filter=10011[OK tickets] 
 * Goal: Final review of change and commit to Clojure source
 * Actions:
 ** Make sure you have the right patch
@@ -175,7 +175,7 @@ image::/images/content/community/process.png[JIRA Workflow]
 **Backlog Review**
 
 * Who: Rich (primarily)
-* Report: http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10372[Backlog tickets]
+* Report: https://clojure.atlassian.net/issues/?filter=10006[Backlog tickets]
 * Goal: See if backlogged tickets should be pulled into next release
 * Actions:
 ** Set Fix Version from Backlog to current release 
@@ -185,9 +185,9 @@ image::/images/content/community/process.png[JIRA Workflow]
 
 * Clojure
 ** Release-independent reports
-*** http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10371[Open] | http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10370[Triaged] | http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10511[Prescreened] | http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10376[Vetted] | http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10378[Declined] | http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10372[Backlog]
+*** https://clojure.atlassian.net/issues/?filter=10001[Open] | https://clojure.atlassian.net/issues/?filter=10002[Triaged] | https://clojure.atlassian.net/issues/?filter=10003[Prescreened] | https://clojure.atlassian.net/issues/?filter=10004[Vetted] | https://clojure.atlassian.net/issues/?filter=10005[Declined] | https://clojure.atlassian.net/issues/?filter=10006[Backlog]
 ** Next release work queues
-*** http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10373[Needs Patch] | http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10374[Screenable] | http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10375[Incomplete] | http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10383[Screened] | http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10377[Ok] | http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10379[Accepted] | http://dev.clojure.org/jira/secure/IssueNavigator.jspa?mode=hide&requestId=10380[Closed]
+*** https://clojure.atlassian.net/issues/?filter=10007[Needs Patch] | https://clojure.atlassian.net/issues/?filter=10008[Screenable] | https://clojure.atlassian.net/issues/?filter=10009[Incomplete] | https://clojure.atlassian.net/issues/?filter=10010[Screened] | https://clojure.atlassian.net/issues/?filter=10011[Ok] | https://clojure.atlassian.net/issues/?filter=10012[Accepted] | https://clojure.atlassian.net/issues/?filter=10013[Closed]
 ** Other
 *** http://jafingerhut.github.io/clj-ticket-status/clojure-ticket-info.html[Tickets by Weighted Vote]
 * ClojureScript
