--- a/content/news/2012/02/17/clojure-governance.adoc
+++ b/content/news/2012/02/17/clojure-governance.adoc
@@ -68,7 +68,7 @@ It's a difficult position to be in. Most of Clojure/core's members come from the
 
 So what is clojure-contrib today? It's a curated set of libraries whose ownership and licensing is governed by the Clojure Contributor Agreement. It could also serve as a proving ground for new features in the language, but this does not imply that every contrib library will eventually make it into the language.
 
-With the expansion of contrib, we've given name to another layer of organization: *Clojure/dev*. Clojure/dev is the set of all people who have signed the Clojure Contributor Agreement. This entitles them to participate in discussions on the http://groups.google.com/group/clojure-dev[clojure-dev mailing list], submit patches on https://dev.clojure.org/jira[JIRA], and become committers on contrib libraries. Within Clojure/dev is the smaller set of people who have been tasked with screening Clojure language tickets. Clojure/core overlaps with both groups.
+With the expansion of contrib, we've given name to another layer of organization: *Clojure/dev*. Clojure/dev is the set of all people who have signed the Clojure Contributor Agreement. This entitles them to participate in discussions on the http://groups.google.com/group/clojure-dev[clojure-dev mailing list], submit patches on https://clojure.atlassian.net/projects/CLJ[JIRA], and become committers on contrib libraries. Within Clojure/dev is the smaller set of people who have been tasked with screening Clojure language tickets. Clojure/core overlaps with both groups.
 
 image::/images/content/news/2012-02-17/clojure-community-layers.png[Diagram showing layers of the Clojure community]
 
