--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -19,6 +19,10 @@ Note: All dev releases are subject to breaking changes for new work since the pr
 
 == Release 1.10.1
 
+=== 1.10.1-RC1 (May 21, 2019)
+
+* Updated changelog for 1.10.1
+
 === 1.10.1-beta3 (May 16, 2019)
 
 * https://clojure.atlassian.net/browse/CLJ-2504[CLJ-2504] Provide more options for error reporting in clojure.main
